compiler/k8/judge0-redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge0-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge0-redis
  template:
    metadata:
      labels:
        app: judge0-redis
    spec:
      containers:
        - name: redis
          image: redis:6.0
          command: ["bash", "-c", 'docker-entrypoint.sh --appendonly yes --requirepass "$REDIS_PASSWORD"']
          volumeMounts:
            - name: redis-pvc
              mountPath: /data
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
      volumes:
        - name: redis-pvc
          persistentVolumeClaim:
            claimName: redis-pvc
