compiler/k8/compiler_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: judge0-server
spec:
  selector:
    app: judge0-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2358
  type: LoadBalancer
