compiler/k8/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: judge0-db
spec:
  selector:
    app: judge0-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
