compiler/k8/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: judge0-redis
